--- a/dissertation.bib
+++ b/dissertation.bib
@@ -6352,4 +6352,26 @@ Adolescents are notorious for engaging in reward-seeking behaviors, a tendency a
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/TNMIEDQ7/Chelian et al. - 2015 - Reinforcement learning and instance-based learning.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/26EBYCZP/7346127.html}
 }
 
+@book{rcoreteam2018,
+  location = {{Vienna, Austria}},
+  title = {R: {{A Language}} and {{Environment}} for {{Statistical Computing}}},
+  url = {https://www.R-project.org/},
+  date = {2018},
+  keywords = {_diss},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing}
+}
+
+@article{yuen1974,
+  title = {The Two-Sample Trimmed t for Unequal Population Variances},
+  volume = {61},
+  number = {1},
+  journaltitle = {Biometrika},
+  date = {1974},
+  pages = {165--170},
+  keywords = {_diss},
+  author = {Yuen, Karen K.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/3QZJUWLA/264376.html}
+}
+
 
