--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -4,21 +4,32 @@ bibliography: "/home/jflournoy/code_new/social-motives-rl-writeup/dissertation.b
 csl: "/home/jflournoy/Rlibs/probly/bib/apa-old-doi-prefix.csl"
 ---
 
-Adolescents are notorious for developing normally through the transition from childhood into the adult state.
-The changes during this period of development include increasing propensity toward adult-like behaviors, such as in sexual activity, and establishing a place in an extra-familial social network.
-Establishing mastery of the social world, and access to material and social resources, is a key concern of this developmental stage.
-Indeed, the developmental end-point of this transition is to a bio-social state in which the chance of successful sexual reproduction and child rearing is optimized.
-Relative to other primates human childhood is extremely protracted, essentially representing a 'pause' of development [@delgiudice2009], perhaps as a way to reduce the burden of metabolic requirements on parents with multiple offspring and to reduce feeding competition with adults, but that is also associated with more rapid post-pubertal development[@gurven2006].
-From a birds-eye-view, this places the psychology and behavior of the adolescent at a transition point between a relatively quiescent period, and period of acceleration into an adult motivational frame. 
-This evolutionary developmental transition is accompanied by increasing access to (and ability to exploit) the normative cultural expectations, practices, and products of adulthood such as resource acquisition (and acompanying privilages and anxieties), familial care, courtship, social group bonding and hierarchy formation, physical mobility (e.g., public transit, automobiles), and intoxicants.
-Here, I focus on two motivations that are, first, central to ultimate reproductive success and, second, likely to be accentuated by or the result of adolescent development: mate-seeking and status.
-Although this focus is of theoretical intrest, it is motivated by a practical concern for the adverse health outcomes that some adolescent-emergent behaviors are associated with.
+- Adolescents is a period marked by health risk
+  - An extensive body of literature describes dramatic changes in the rates of health risking behaviors (HRBs) during adolescence [e.g., binge drinking, risky sexual behavior; @centersfordiseasecontrolandprevention2003;@chassin2009;@patrick2011;@stevenson2007;@willoughby2013].
+  - health risking behavior and unintentional injury describes a trajectory that peaks toward late adolescence
+  - This gives rise to the paradox of adolescence: although this is a period of robust physical health and increased mental ability, both morbidity and mortality increase [@dahl2004]
+  
 
-An extensive body of literature describes dramatic changes in the rates of health risking behaviors (HRBs) during adolescence [e.g., binge drinking, risky sexual behavior; @centersfordiseasecontrolandprevention2003;@chassin2009;@patrick2011;@stevenson2007;@willoughby2013].
-These HRBs lead to what has been called the paradox of adolescence: although this is a period of robust physical health and increased mental ability, both morbidity and mortality increase [@dahl2004].
-It can seem perplexing that adolescents engage in these HRBs despite evaluating the probability of uncertain events with accuracy similar to adults [@fischhoff2008], and demonstrating general accuracy (on occasion, somewhat excessive optimism) about the probability of future outcomes [@debruin2007;@fischhoff2000].
-These findings become less paradoxical when considered from a functional-developmental perspective in which adolescents increase in sensation and novelty seeking.
-That is, taking risks, or exploring situations with known or unknown probabilistic outcomes, is an essential part of this developmental stage, perhaps allowing adolescents to build expertise and wisdom about the world they must engage with as adults [@crone2012;@blakemore2014;@romer2017].  
+- Current conceptualizations in the field capture important features of adolescence, but focusing on functional aspects of behavior (which many of these acknowledge as important) will help to strengthen and unify these approaches.
+  - Imperfect information, or exaggerated expectations of invincibility
+    - Teens on most questions show no particular bias toward over or underestimating probabilities, though their estimation is not perfect; it does generally correlate with prospective outcomes [@fischhoff2008;@debruin2007;@fischhoff2000].
+      - the one thing that is aberrant is that teens overestimate their probability of dying, and it is easy to see how this would affect decisions regarding delayed rewards
+  - Imbalance between reward seeking and control
+    - A similar theory has been cast in several different ways
+      - reward versus control (sensation seeking)
+      - imbalance model
+      - dual systems
+    - Sensitivity to reward theory doesn't account for why adolescents find certain behaviors or activities more rewarding than others—doesn't explain what they find rewarding.
+  - Social reorientation theory
+    - Reorient from family being dominant social network to peers being the dominant social network
+    - peer group has a different set of values that shapes your behavior
+    - but doesn't account for why those values are what they are
+  - Fuzzy trace theory
+    - Haven't developed clear heuristics so explore all possible options (like a rational actor) to develop more adult like heuristics, which exposes them to risk
+    - That is, taking risks, or exploring situations with known or unknown probabilistic outcomes, is an essential part of this developmental stage, perhaps allowing adolescents to build expertise and wisdom about the world they must engage with as adults [@crone2012;@blakemore2014;@romer2017].
+
+
+
 
 In order to more fully understand this increased propensity for exploration during adolescence, it is crucial to also understand the motives that compel and shape such exploration.
 That is, differences in sub-domains of motivation will increases or decreases the expected value of various learning opportunities, and thus alter the ways in which adolescents express this exploratory behavior.
@@ -32,6 +43,16 @@ This proposal describes work that starts to lay an empirical foundation for a de
 The long-term objective of laying this foundation is to illuminate the role of adolescent-developing social motives in health-relevant behaviors and environmental responses.
 
 # Motivations from an Evolutionary Psychology Perspective
+
+Adolescents are notorious for developing normally through the transition from childhood into the adult state.
+The changes during this period of development include increasing propensity toward adult-like behaviors, such as in sexual activity, and establishing a place in an extra-familial social network.
+Establishing mastery of the social world, and access to material and social resources, is a key concern of this developmental stage.
+Indeed, the developmental end-point of this transition is to a bio-social state in which the chance of successful sexual reproduction and child rearing is optimized.
+Relative to other primates human childhood is extremely protracted, essentially representing a 'pause' of development [@delgiudice2009], perhaps as a way to reduce the burden of metabolic requirements on parents with multiple offspring and to reduce feeding competition with adults, but that is also associated with more rapid post-pubertal development[@gurven2006].
+From a birds-eye-view, this places the psychology and behavior of the adolescent at a transition point between a relatively quiescent period, and period of acceleration into an adult motivational frame. 
+This evolutionary developmental transition is accompanied by increasing access to (and ability to exploit) the normative cultural expectations, practices, and products of adulthood such as resource acquisition (and accompanying privileges and anxieties), familial care, courtship, social group bonding and hierarchy formation, physical mobility (e.g., public transit, automobiles), and intoxicants.
+Here, I focus on two motivations that are, first, central to ultimate reproductive success and, second, likely to be accentuated by or the result of adolescent development: mate-seeking and status.
+Although this focus is of theoretical interest, it is motivated by a practical concern for the adverse health outcomes that some adolescent-emergent behaviors are associated with.
 
 Two motivational domains appear often in the introductions (and occasionally also in the discussion sections) of research on adolescence: sex and status.
 With regard to sex, authors often acknowledge that the transition to sexual maturity is a defining biological feature of adolescence, though very little contemporary adolescent research investigates directly the increased motivation to explore and engage in romantic and sexual behavior [@suleiman2017].
